--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t phoenix1point618/docker-react -f Dockerfile.dev
+  - docker build -t phoenix1point618/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true phoenix1point618/docker-react npm run test
