--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,19 @@ before_install:
 
 script:
   - docker run -e CI=true phoenix1point618/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-west-2-912861598542"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  scret_access_key:
+    secure: "$AWS_SECRET_KEY"
+
+
+DockerReact-env.j4dxi6arsb.us-west-2.elasticbeanstalk.com
